project(main)
INCLUDE("${esesc_SOURCE_DIR}/CMake.common")

INCLUDE_DIRECTORIES(${suc_SOURCE_DIR})
INCLUDE_DIRECTORIES(${emulint_SOURCE_DIR})
INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
INCLUDE_DIRECTORIES(${mem_SOURCE_DIR})

INCLUDE_DIRECTORIES(${net_SOURCE_DIR})
INCLUDE_DIRECTORIES(${rst_SOURCE_DIR}) 
 
INCLUDE_DIRECTORIES(${mcpat_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${peq_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${pwrmodel_SOURCE_DIR})
INCLUDE_DIRECTORIES(${sesctherm_SOURCE_DIR})
INCLUDE_DIRECTORIES(${sampler_SOURCE_DIR})

INCLUDE_DIRECTORIES(${qemuint_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${gpuint_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${scqemu_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${migdb_SOURCE_DIR}) 

FILE(GLOB main_SOURCE *.cpp)
FILE(GLOB main_HEADER *.h)

SOURCE_GROUP("Source Files" FILES ${main_SOURCE})
SOURCE_GROUP("Header Files" FILES ${main_HEADER})

##########################
# esesc and mainbench

SET(EXELIST "esesc" "lsqtest" "qemumain" "qemumin" "membench" "netBench" "cachebench")

FOREACH(EXE ${EXELIST})
	FILE(GLOB exec_SOURCE "${EXE}.cpp")
  IF(EXE MATCHES "esesc")
	  ADD_EXECUTABLE(${EXE} ${exec_SOURCE})
  ELSE(EXE MATCHES "esesc")
	  ADD_EXECUTABLE(${EXE} EXCLUDE_FROM_ALL  ${exec_SOURCE})
  ENDIF(EXE MATCHES "esesc")
	LIST(REMOVE_ITEM main_SOURCE ${exec_SOURCE})
ENDFOREACH(EXE)

###############################
ADD_LIBRARY(main ${main_SOURCE} ${main_HEADER})

FOREACH(EXE ${EXELIST})
  add_dependencies(${EXE} qemu)
  TARGET_LINK_LIBRARIES(${EXE} ${CMAKE_QEMU_OBJS})
  TARGET_LINK_LIBRARIES(${EXE} main sampler mem net core pwrmodel mcpat sesctherm peq)
  TARGET_LINK_LIBRARIES(${EXE} qemuint emulint suc)
  TARGET_LINK_LIBRARIES(${EXE} ${CMAKE_QEMU_LIBS})
ENDFOREACH(EXE)

